--- a/task-01.html
+++ b/task-01.html
@@ -10,9 +10,9 @@
   <body>
     <p><a href="index.html">Go back</a></p>
 
-    <ul  id= "categories">
+    <ul id="categories">
       <li class="item">
-        <h2 class="js-h2">Animals</h2>
+        <h2>Animals</h2>
 
         <ul>
           <li>Cat</li>
